--- a/P2_Tip_Calculator/Description
+++ b/P2_Tip_Calculator/Description
@@ -1,4 +1,37 @@
-In this project, my aim is to build a modern tip calculator. 
-The project's primary interface comprises a container labeled "Tip Calculator" with two input fields: one for the bill amount and the other for the tip percentage. 
-The tip calculator has a modern design that is styled using CSS. 
-I utilized JavaScript to obtain the values of the two input fields and calculate the total amount based on these values.
+This project is a straightforward web application designed to calculate the total bill amount including a tip. 
+Users input the bill amount and the desired tip percentage, and the application computes the total amount to be paid. 
+The project illustrates basic form handling, arithmetic operations, and dynamic content updates using JavaScript.
+
+Key Features:
+1. User Input Handling: Allows users to input the bill amount and tip percentage.
+2. Tip Calculation: Calculates the total amount including the tip based on user inputs.
+3. Dynamic Feedback: Displays the calculated total on the webpage for immediate user feedback.
+
+Technologies Used:
+1. HTML: For structuring the input fields, button, and display area.
+2. CSS: For basic styling (not shown in the provided code).
+3. JavaScript: To handle user interactions, perform the tip calculation, and update the webpage content dynamically.
+
+How It Works:
+HTML Elements:
+1. btnEl is the button that the user clicks to calculate the total bill.
+2. billInput is the input field where the user enters the bill amount.
+3. tipInput is the input field where the user enters the tip percentage.
+4. totalSpan is the element where the calculated total bill is displayed.
+
+Calculate Total Function:
+1. The calculateTotal function retrieves the values entered by the user for the bill amount and the tip percentage.
+2. It calculates the total bill amount by adding the tip to the original bill amount. The formula used is totalValue = billValue * (1 + tipValue / 100).
+3. The resulting total amount is then rounded to two decimal places using toFixed(2) for precision and displayed in the totalSpan element.
+
+Event Listener:
+An event listener is added to the button (btnEl) to trigger the calculateTotal function when the button is clicked.
+
+This project demonstrates how to build a simple yet functional web application that performs basic arithmetic operations and updates the user interface based on user input. 
+It is a practical example of using JavaScript to create interactive and user-friendly web applications.
+
+
+
+
+
+
